fix joystick ref area not being the drawn area in landscape on iOS PWA

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,11 @@
 html {
   font-size: 16px;
   -webkit-tap-highlight-color: transparent;
+  
+  margin-top: env(safe-area-inset-top);
+  margin-bottom: env(safe-area-inset-bottom);
+  margin-left: env(safe-area-inset-left);
+  margin-right: env(safe-area-inset-right);
 }
 
 body {
